--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <li><a href="#">Products</a></li>
                     <li><a href="#">Stats</a></li>
                     <li><a href="#">Resources</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Bloggg</a></li>
                 </ul>
             </nav>
             <div class="header-btns">
